# upi-payments

./: Cargo.toml  readme.md
src/: bank_client.rs  error.rs  idempotency.rs  lib.rs  main.rs  orchestrator.rs  types.rs  validator.rs
tests/: payments.rs
